--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=product-info-services
 server.port=8084
 
+
 #
 #eureka.client.serviceUrl.defaultZone= http://${registry.host:localhost}:${registry.port:8761}/eureka/
 #eureka.client.healthcheck.enabled= true
@@ -11,3 +12,22 @@ server.port=8084
 ##server.ribbon.listOfServers=localhost:9090,localhost:9091,localhost:9092
 #server.ribbon.ServerListRefreshInterval=1000
 ##logging.level.root=TRACE
+
+spring.security.user.name=user
+spring.security.password=augustdev2020
+
+spring.datasource.url = jdbc:mysql://september2020-sql-db.cift0elli9qh.us-east-1.rds.amazonaws.com/sdet2020?serverTimezone=UTC&useSSL=false
+#jdbc:mysql://august2020-dev-mysql-database-1.cift0elli9qh.us-east-1.rds.amazonaws.com:3306/Team01?serverTimezone=UTC&useSSL=false
+spring.datasource.username= admin
+spring.datasource.password= september2020db
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#MYSQLJDBC.driver = com.mysql.cj.jdbc.Driver
+#MYSQLJDBC.url = jdbc:mysql://localhost/PNT?serverTimezone=UTC&useSSL=false
+#MYSQLJDBC.userName = root
+#MYSQLJDBC.password = abc123
