--- a/src/main/resources/deployment.yml
+++ b/src/main/resources/deployment.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: product-service-info-docker
+  name: product-info-docker
 spec:
   selector:
     matchLabels:
-      app: product-service-info-docker
+      app: product-info-docker
   replicas: 3
   template:
     metadata:
       labels:
-        app: product-service-info-docker
+        app: product-info-docker
     spec:
       containers:
-        - name: product-service-info-docker
-          image: product-service-info-docker:1.0
+        - name: product-info-docker
+          image: product-info-docker:1.0
           ports:
-            - containerPort: 8084
+            - containerPort: 8087
