--- a/src/main/resources/service.yml
+++ b/src/main/resources/service.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: product-service-info-docker
+  name: product-info-docker
   labels:
-    name: product-service-info-docker
+    name: product-info-docker
 spec:
   ports:
     - nodePort: 30163
-      port: 8084
-      targetPort: 8084
+      port: 8087
+      targetPort: 8087
       protocol: TCP
   selector:
-    app: product-service-info-docker
+    app: product-info-docker
   type: NodePort
