--- a/src/main/resources/service.yml
+++ b/src/main/resources/service.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: product-info-docker
+  name: product-info-kube
   labels:
-    name: product-info-docker
+    name: product-info-kube
 spec:
   ports:
-    - nodePort: 30163
+    - nodePort: 30164
       port: 8087
       targetPort: 8087
       protocol: TCP
   selector:
-    app: product-info-docker
+    app: product-info-kube
   type: NodePort
